[project]
name = "learning-tools"
version = "0.1.0"
description = "Tools/scripts/etc for configuring and running machine learning experiments"
readme = "README.md"
authors = [{ name = "Gregory Johnson", email = "gregjohnso@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    # "numpy>=2.1.2",
    "bionumpy>=1.0.12",
    "datasets>=3.0.1",
    "esm>=3.0.3",
    "huggingface-hub>=0.25.2",
    "ruff>=0.7.0",
    "tiktoken>=0.8.0",
    "torch>=2.5.0",
    "tqdm>=4.66.5",
    "lightning>=2.4.0",
    "omegaconf>=2.3.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "tensorboardx>=2.6.2.2",
    "tensorboard>=2.18.0",
    "torchmetrics>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
